--- a/Assignment 5/assignment 5/assignment 5.html
+++ b/Assignment 5/assignment 5/assignment 5.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <iframe class="airtable-embed" src="https://airtable.com/embed/shrtbLkn3HYJ4wU5J?backgroundColor=yellow&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-        <iframe src="“//datawrapper.dwcdn.net/XZ2Wx/1/”" frameborder="“0&quot;" height="“400&quot;" style="“width:"></iframe></div>
+        <iframe src="https://datawrapper.dwcdn.net/XZ2Wx/1/" frameborder="0" height="500" style="width: ; min-width: 150%" aria-label="Bar Chart" id="datawrapper-chart-xuxH0" scrolling="no" title="The percentage of the DSE result of Day-School student got&amp;nbsp;"></iframe><iframe src="“//datawrapper.dwcdn.net/XZ2Wx/1/”" frameborder="“0&quot;" height="“400&quot;" style="“width:"></iframe></div>
     </div>
   </div>
 </body>
